- Updated Group Placement to prevent page from jumping on group placement.

--- a/RockWeb/Themes/Rock/Styles/group-placement.less
+++ b/RockWeb/Themes/Rock/Styles/group-placement.less
@@ -33,7 +33,7 @@
   &.empty,
   &:empty  {
     position: relative;
-    padding: 72px 16px;
+    padding: 41px 16px;
     outline-offset: -16px;
 
     &::after {
@@ -54,8 +54,6 @@
   }
 
   &.droppable {
-    min-height: 82px;
-
     &:empty {
       outline: 2px dashed rgba(0, 0, 0, .1);
     }
